src/test/resources/fixtures/parser/solidity_official_tests/shouldSucceed/functionTypeInStruct.sol
contract test {
  struct S {
    function (uint x, uint y) internal returns (uint a) f;
    function (uint, uint) external returns (uint) g;
    uint d;
  }
}