src/test/resources/fixtures/parser/solidity_official_tests/shouldFail/external_variable.sol
contract c {
  uint external x;
}